--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <head>
+  <title>snake-js</title>
+  <meta name="description">Minimalistic snake clone written in vanilla JavaScript</meta>
+  <meta name="keywords">Snake, JavaScript, snake-js, js</meta>
+  <meta name="author">Fragstiller</meta>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic&display=swap" rel="stylesheet">
@@ -22,7 +26,7 @@
         spacebar+enter to apply
       </div>
     </div>
-    <div>check out project's <a href="">github</a></div>
+    <div>check out project's <a href="https://github.com/Fragstiller/snake-js">github</a></div>
   </div>
   <script src="snake.js"></script>
 </body>
