--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta name="description" content="Minimalistic snake clone written in vanilla JavaScript">
   <meta name="keywords" content="Snake, JavaScript, snake-js, js">
   <meta name="author" content="Fragstiller">
+  <link rel="shortcut icon" href="snake-js/favicon.ico"/>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic&display=swap" rel="stylesheet">
