--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="main-container">
-    <div>snake-js <span style="color: gray; font-size: medium;">minimalistic snake clone written in vanilla JavaScript</span></div>
+    <div>snake-js <span style="color: gray; font-size: medium;">minimalistic snake clone written with vanilla JavaScript</span></div>
     <div class="game-container">
       <div class="game-info">
         use wasd or arrows to play<br><br>
