mobile design done

--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
         press spacebar to start<br><br>
         press enter to reload
       </div>
+      <div class="game-controls-mobile">
+        <a>start</a> <a>reload</a>
+        <div class="game-controls-mobile-arrows">
+          <img src="img/up.png" class="arrow-up">
+          <img src="img/left.png" class="arrow-left">
+          <img src="img/down.png" class="arrow-down">
+          <img src="img/right.png" class="arrow-right">
+        </div>
+      </div>
       <div id="game"></div>
-      <div class="game-info">
-        settings<br><br>
+      <div class="game-settings">
+        <span class="settings-additional">settings<br><br></span> 
         grid: <a id="grid-setting"></a><br>
         difficulty: <a id="diff-setting"></a><br>
         head tracker: <a id="tracker-setting"></a><br>
-        size: <a id="size-setting"></a><br><br>
-        spacebar+enter to apply
+        size: <a id="size-setting"></a>
+        <span class="settings-additional"><br><br>spacebar+enter to apply</span>
       </div>
     </div>
     <div>check out project's <a href="https://github.com/Fragstiller/snake-js">github</a></div>
