basic mobile controls

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div class="game-controls-mobile">
         <a>start</a> <a>reload</a>
         <div class="game-controls-mobile-arrows">
-          <img src="img/up.png" class="arrow-up">
-          <img src="img/left.png" class="arrow-left">
-          <img src="img/down.png" class="arrow-down">
-          <img src="img/right.png" class="arrow-right">
+          <img src="img/up.png" id="arrow-up">
+          <img src="img/left.png" id="arrow-left">
+          <img src="img/down.png" id="arrow-down">
+          <img src="img/right.png" id="arrow-right">
         </div>
       </div>
       <div id="game"></div>
