event removal + start/reload button functionality added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         press enter to reload
       </div>
       <div class="game-controls-mobile">
-        <a>start</a> <a>reload</a>
+        <a id="mobile-start">start</a> <a id="mobile-reload">reload</a>
         <div class="game-controls-mobile-arrows">
           <img src="img/up.png" id="arrow-up">
           <img src="img/left.png" id="arrow-left">
